Update Ars Nouveau support